Add Township and Range grid + Font Awesome

--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "bulma": "^0.9.4",
     "esri-leaflet": "^3.0.8",
     "handlebars": "^4.7.7",
