--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@mapbox/leaflet-pip": "^1.1.0",
     "bulma": "^0.9.4",
+    "bulma-switch": "^2.0.4",
     "esri-leaflet": "^3.0.8",
     "handlebars": "^4.7.7",
     "jquery": "^3.6.1",
