Remove unused package

--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "esri-leaflet": "^3.0.8",
     "handlebars": "^4.7.7",
     "jquery": "^3.6.1",
-    "leaflet": "^1.8.0",
-    "leaflet-event-forwarder": "^0.0.3"
+    "leaflet": "^1.8.0"
   }
 }
