--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "watersheds",
   "version": "0.7.2",
-  "description": "Oregon surface drinking water watersheds",
+  "description": "Oregon Drinking Watersheds",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode \"development\"",
