--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "watersheds",
-  "version": "0.7.2",
+  "version": "0.7.3",
   "description": "Oregon Drinking Watersheds",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "sass-loader": "^13.0.2",
     "source-map-loader": "^4.0.0",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0"
