--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "watersheds",
-  "version": "0.7.3",
+  "version": "0.7.4",
   "description": "Oregon Drinking Watersheds",
   "main": "index.js",
   "scripts": {
@@ -35,15 +35,13 @@
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
     "@creativebulma/bulma-collapsible": "^1.0.4",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "@mapbox/leaflet-pip": "^1.1.0",
     "bulma": "^0.9.4",
     "bulma-slider": "^2.0.5",
